# pharmokinetic-modelling

./: README.md  conf.py  index.rst  make.bat  pharmodel_kinetic.py  prototype.py  pyproject.toml  requirements.txt  setup.py  test_doses_instantaneous.csv  test_dosis_combined.csv  test_dosis_continuous.csv  test_dosis_instantaneous.csv  test_parameters.txt
.github/workflows/: coverage.yml  os-test.yml  os-tests.yml  python-test.yml  unit-tests.yml
docs/: conf.py  index.rst
pharmodel/: __init__.py  model.py  protocol.py  solution.py  test_models.py  test_solution.py  visualisation.py
pharmodel/tests/: test_model.py  test_protocol.py  test_solution.py
pkmodel/: model.py  protocol.py  solution.py  test_models.py  visualisation.py
source/: conf.py  index.rst
test_data/: test_doses_combined_nan.csv  test_doses_continuous_None.csv  test_doses_continuous_negative.csv  test_doses_continuous_zero.csv  test_dosis_combined_nan.csv  test_dosis_constant_None.csv  test_dosis_constant_negative.csv  test_dosis_constant_zero.csv  test_dosis_instantaneous.csv  test_parameters.txt
